# AIMS

./: .env.example  .env.production  .gitignore  AI_ASSISTANT_PROMPT.md  CHANGELOG.md  CI_FIXES_NEEDED.md  Dockerfile.backend  FIX_FRONTEND_BUILD.md  README.md  STATUS.md  TEST_DATA_SUMMARY.md  TEST_VALIDATION_REPORT.md  TYPESCRIPT_ERRORS_TO_FIX.md  claude_prompts.md  debug-connection-test.spec.ts  debug_auth.py  debug_snaptrade.py  docker-compose.yml  fix_encryption_issue.py  manual-snaptrade-test.js  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run-connect-test-debug.sh  run-connect-test-focused.sh  run-connect-test.sh  start.sh  test-login.html  test-snaptrade-fix.html  test_imports.py  verify_fix.py
.agent-os/product/: decisions.md  mission.md  roadmap.md  tech-stack.md
.agent-os/specs/2025-01-29-position-sizing-calculator-#68/: spec.md  tasks.md
.agent-os/specs/2025-07-28-drawdown-analysis-#63/: spec.md  tasks.md
.agent-os/specs/2025-07-28-performance-dashboard-#60/: spec.md  tasks.md
.agent-os/specs/2025-07-29-monthly-reports-#66/: spec.md  tasks.md
.claude/: settings.local.json
.github/workflows/: ci.yml  claude-code-review.yml
.kiro/specs/compliance-reporting/: design.md  requirements.md  tasks.md
.kiro/specs/morning-brief-system/: design.md  requirements.md  tasks.md
.kiro/specs/next-actions-dashboard/: design.md  requirements.md  tasks.md
.kiro/specs/portfolio-tracking/: design.md  requirements.md  tasks.md
.kiro/specs/trade-ticket-builder/: design.md  requirements.md  tasks.md
.kiro/specs/weekly-task-management/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
_ARCHIVE/: AIMS-PRD-phase01.md  AIMS-PRD.md  issue-52-status.md  project-manager-briefing.md  schedule_with_note.sh
docs/: API_DOCUMENTATION.md  architecture.md  local-setup.md  setup.md  snaptrade-production-guide.md
docs/testing/: snaptrade-integration-tests.md
e2e-tests/: FULL_ACCOUNT_CONNECTION_TEST_RESULTS.md  TEST_RESULTS_CONNECT_ALL_ACCOUNTS.md  TEST_RESULTS_SUMMARY.md  auth-ui-validation.js  manual-debug-snaptrade.js  manual-validation.js  package-lock.json  package.json  playwright.config.ts  verify-snaptrade-fix.spec.ts
e2e-tests/playwright-report/: index.html
e2e-tests/test-results/: .last-run.json
e2e-tests/tests/: basic-access.spec.ts  basic-validation.spec.ts  connect-accounts-dev.spec.ts  connect-all-accounts.spec.ts  connection-flow-test.spec.ts  debug-kelly-calculator.spec.ts  debug-position-calculator.spec.ts  debug-snaptrade-connection.spec.ts  debug-snaptrade-loop.spec.ts  drawdown-analysis.spec.ts  full-app-validation.spec.ts  login-test.spec.ts  manual-performance-test.spec.ts  performance-dashboard.spec.ts  performance-drawdown.spec.ts  position-sizing-calculator.spec.ts  simple-connection-test.spec.ts  simple-navigation.spec.ts  snaptrade-connection.spec.ts  verify-snaptrade-fix-simple.spec.ts  verify-snaptrade-fix.spec.ts
frontend/: .env.example  .eslintrc.json  API_INTEGRATION.md  Dockerfile  index.html  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.json  vite.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/components/dashboard/: grid.tsx  header.tsx  (+2 more)
frontend/e2e/: drawdown-analysis.spec.ts
frontend/playwright-report/: index.html
frontend/src/: App.tsx  test-api.ts
frontend/test-results/: .last-run.json
frontend/tests/: widgets.spec.ts
frontend/types/: portfolio.ts
magic-path/AIM-dashboard/: package.json
magic-path/account-selector/: index.html
magic-path/auth-forms/: index.html
magic-path/income-goal-tracker/: index.html
magic-path/morning-brief-card/: index.html
magic-path/snaptrade-userflow/: index.html
magic-path/task-checklist/: index.html
magic-path/trade-ticket-form/: index.html
migrations/: add_performance_indexes.py
schedule_logs/: pending_checkin.txt
scripts/: __init__.py  create_test_user.py  generate_test_performance_data.py  init_db.py  start_backend.sh  start_dev.sh  start_frontend.sh  update_test_user.py  utils.py  validate_position_sizing.py  verify_api_endpoints.py  verify_setup.py
src/: __init__.py  requirements.txt
src/api/: __init__.py  auth.py  main.py
src/core/: config.py
src/data/: __init__.py  cache.py
src/db/: __init__.py  models.py  seed_tasks.py  session.py
src/services/: __init__.py  allocation_analyzer.py  benchmark_service.py  drawdown_service.py  drawdown_service_cached.py  mock_weasyprint.py  monthly_report_service.py  performance_analytics.py  performance_calculator.py  portfolio.py  position_sizing.py  report_generator.py  risk_metrics_engine.py  scheduler.py  snaptrade_service.py
src/utils/: encryption.py
tests/: __init__.py  conftest.py  test_drawdown_caching.py  test_drawdown_endpoints.py  test_drawdown_models.py  test_drawdown_performance.py  test_drawdown_service.py  test_health.py  test_monthly_report_service.py  test_monthly_reports_api.py  test_performance_analytics.py  test_performance_api.py  test_position_sizing_api.py  test_position_sizing_service.py
tests/integration/: test_performance_data_flow.py  test_performance_final.py  test_performance_integration.py  test_performance_integration_fixed.py  test_snaptrade_integration.py
tests/mocks/: __init__.py  rate_limiter.py
tests/test_tasks/: __init__.py  conftest.py  test_compliance_checker.py  test_compliance_checker_async.py  test_e2e_workflow.py  test_rrule_parser.py  test_task_api.py  test_task_service.py
(+146 files in other folders)
